--- a/contact_us.html
+++ b/contact_us.html
@@ -116,7 +116,7 @@ input[type="submit"]:hover {
 <body>
     <h1><b> Contact Us</b></h1>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="#">Activities</a>
         <a href="contact_us.html">Contact</a>
     </nav>
